Possible whitespace fix

--- a/src/components/css/_index.scss
+++ b/src/components/css/_index.scss
@@ -20,3 +20,8 @@ h4 {
     font-size: 2.5em !important;
 }
 
+#gatsby-announcer, #query-on-demand-indicator-element {
+    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
+}
